# widowx_arm

./: README.md
widowx_arm/: CHANGELOG.rst  CMakeLists.txt  package.xml
widowx_arm_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
widowx_arm_controller/config/: 58-dynamixel-widowx.rules  58-widowx.rules  arbotix.yaml  arm.yaml  dynamixel_controllers.yaml  dynamixel_manager.yaml
widowx_arm_controller/launch/: dynamixel_widox_arm_controller.launch  widowx_arm_controller.launch
widowx_arm_controller/src/: widowx_gripper.py
widowx_arm_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
widowx_arm_description/launch/: load_description.launch  widowx_rviz.launch
widowx_arm_description/robots/: widowx_arm.urdf.xacro
widowx_arm_description/urdf/: widowx.urdf  widowx.urdf.xacro  widowx.xacro  widowx_arm.gv  widowx_arm.urdf  widowx_macro.xacro
widowx_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
widowx_arm_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  widowx_arm.srdf
widowx_arm_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  widowx_arm_moveit_controller_manager.launch.xml
