<?xml version="1.0"?>
<package>
  <name>widowx_arm</name>
  <version>0.0.2</version>
  <description>The widowx_arm package</description>

 
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>


  <url type="website">http://ros.org/wiki/widowx_arm</url>
  <url type="repository">https://github.com/RobotnikAutomation/widowx_arm.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/widowx_arm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>widowx_arm_controller</run_depend>
  <run_depend>widowx_arm_description</run_depend>

  <export><metapackage/></export>

</package>
