<?xml version="1.0"?>
<package>
  <name>widowx_arm_controller</name>
  <version>0.0.0</version>
  <description>The widowx_arm_controller package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/widowx_arm_controller</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arbotix_python</build_depend>
  <run_depend>arbotix_python</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
