<?xml version="1.0"?>
<package>
  <name>widowx_arm_controller</name>
  <version>0.0.2</version>
  <description>The widowx_arm_controller package</description>

  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="cvillar@robotnik.es">Carlos Villar</maintainer>

  <license>BSD</license>


  <url type="website">http://ros.org/wiki/widowx_arm</url>
  <url type="repository">https://github.com/RobotnikAutomation/widowx_arm.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/widowx_arm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>arbotix_python</build_depend>
  <run_depend>arbotix_python</run_depend>



  <export>
  </export>
</package>
